2012-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (.vcov.avar1): "posdefify" FIXME (negative eigen values)

2012-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1-1, released to CRAN on 2012-03-02

2012-02-24  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/lmrob.R (lmrob): added init argument: string, function or list.
	* R/lmrob.MM.R (lmrob.fit): added init argument.

	* man/lmrob.Rd: Added documentation about init argument.
	* man/lmrob.fit.Rd: see above.

2012-02-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (print.summary.nlrob): use full call instead of just
	formula. --> shows non-default psi()

2012-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): now use nls(...., weights = *, ..), no longer
	need hack "put everything to the RHS".

2011-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): for zero weights 'w', the residuals
	accidentally where NaN.

2011-12-12  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1
	* src/mc.c (mc_C_d): fixed bug in iteration; see svn log -r 272 & 274

2011-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjbox.R (adjboxStats): fix the sign-error thinko for the case mc < 0.
	* man/adjboxStats.Rd: document; test the reflection invariance now.

2011-12-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjbox.R (adjbox.default): new 'doReflect' argument; default
	'TRUE' ensures that 'adjbox(x)' behaves symmetrically in 'x'.

	* DESCRIPTION (Version): 0.8-0, released to CRAN on 2011-12-09

2011-10-24  Martin Maechler  <maechler@stat.math.ethz.ch>  with	Andreas in train to Fribourg

	* R/glmrob.R (residuals.glmrob): provide a version of
	residuals.glm() which works
	* NAMESPACE: residuals.glmrob

2011-10-11  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-8, released to CRAN on 2011-10-26, r270
