@@ -1,4 +1,0 @@
-MM-misc
-configure-hint-Kurt
-R/glmrobMqle\.R\+-
-.*/.*-not-yet
