@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.9-0
-Date: 2012-05-12
+Version: 0.9-1
+Date: 2012-05-14
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw and Christophe Croux, see file 'Copyrights';
