@@ -1,3 +1,7 @@
+2012-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/lmrob.MM.R (.vcov.avar1): fix typo in "posdefify"
+
 2012-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/lmrob.MM.R (.vcov.avar1): "posdefify" FIXME (negative eigen values)
